# parro-cli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pre-commit-autoupdate.yml  release.yaml
src/parro/: __init__.py  cli.py  client.py  helpers.py
tests/: test_cli.py  test_client.py  test_helpers.py
